--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "brace-expansion": "^2.0.1",
     "buffer": "^6.0.3",
     "buffer-crc32": "^1.0.0",
+    "chai": "^5.1.1",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
     "cheerio-select": "^2.1.0",
@@ -198,6 +199,9 @@
     "zip-stream": "^6.0.1"
   },
   "devDependencies": {
+    "@wdio/cli": "^9.0.9",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
     "webdriverio": "^9.0.9"
   },
   "scripts": {
