--- a/package.json
+++ b/package.json
@@ -205,7 +205,7 @@
     "webdriverio": "^9.0.9"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
   },
   "author": "",
   "license": "ISC"
